Inclusao do projeto aula_bootstrap

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
         </section>
         <footer class="container-fluid text-center bg-footer margin">
-            <p>Desenvolvido por Daniel R. Blanco</p>
+            <p>Desenvolvido por Daniel Rodrigues Blanco</p>
         </footer>
     </body>
 </html>
